--- a/public/ex1/search.html
+++ b/public/ex1/search.html
@@ -1,31 +1,64 @@
 <!DOCTYPE html>
 <html>
-    <head>
+  <head>
+    <!-- Bootstrap -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
 
-        <!-- Bootstrap -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-   
-        <!-- Add Axios Library -->
+    <!-- Add Axios Library -->
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  </head>
+  <body>
+    <div class="container-fluid">
+      <div class="row">
+        Name: <input type="text" id="nameInput" />
+        <!-- add event -->
+      </div>
+      <div class="row">
+        Suggestions:
+        <p id="suggestions"></p>
+        <!-- The names that matches should be displayed here -->
+      </div>
+    </div>
 
-    </head>
-    <body>
-        <div class="container-fluid">
-            <div class="row">
-                Name: <input type="text" id="nameInput" > <!-- add event -->
-            </div>
-            <div class="row">
-                Suggestions:
-                <p id="suggestions"></p> <!-- The names that matches should be displayed here -->
-            </div>
-        </div>
+    <script>
+      // add event handler code here
+      const inputElement = document.getElementById("nameInput");
+      const suggestionsElement = document.getElementById("suggestions");
 
-        <script>
-            // add event handler code here
+      function showHint() {
+        const query = inputElement.value.trim();
+        if (query.length === 0) {
+          suggestionsElement.textContent = "";
+          return;
+        }
 
-        </script>
+        axios
+          .get("/suggest", {
+            params: {
+              query,
+            },
+          })
+          .then((response) => {
+            const text = response.data;
+            suggestionsElement.textContent = text;
+          })
+          .catch((error) => {
+            console.log(error.message);
+          });
+      }
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-        
-      
-    </body>
+      inputElement.addEventListener("keyup", showHint);
+    </script>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
