--- a/public/ex2/info.html
+++ b/public/ex2/info.html
@@ -1,32 +1,90 @@
 <!DOCTYPE html>
 <html>
-    <head>
+  <head>
+    <!-- Bootstrap -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
 
-        <!-- Bootstrap -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        
-         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    </head>
-    <body>
-        <div class="bg-light text-center p-5 mb-4">
-            <h2>Choose an option:</h2>
-            <label for="limit">Limit:</label>
-            <input id="limit" type="number" min=1 max=5 value=1>
-            <select onchange="getData()" id="type">
-                <option value="customers">Customers</option>
-                <option value="products">Products</option>
-                <option value="suppliers">Suppliers</option>
-            </select>
-            
-        </div>
-        <div id="result">
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  </head>
+  <body>
+    <div class="bg-light text-center p-5 mb-4">
+      <h2>Choose an option:</h2>
+      <label for="limit">Limit:</label>
+      <input id="limit" type="number" min="1" max="5" value="1" onchange="getData()"/>
+      <select onchange="getData()" id="type">
+        <option value="customers">Customers</option>
+        <option value="products">Products</option>
+        <option value="suppliers">Suppliers</option>
+      </select>
+    </div>
+    <div id="result"></div>
+    <script>
+      async function getData() {
+        const inputLimit = document.getElementById("limit").value;
+        const inputType = document.getElementById("type").value;
 
-        </div>
-        <script>
-            function getData() {
- 
+        try {
+            const response = await axios.get("/data", {
+            params: {
+              limit: inputLimit,
+              type: inputType,
+            },
+          })
+            createTable(response.data);
             }
+            catch(error){
+                console.log(error.message);
+            }
+        }
 
-        </script>
-</body>
+      function createTable(dataObj) {
+        const resultDiv = document.getElementById("result");
+        // clear previous content
+        while (resultDiv.firstChild){
+            resultDiv.firstChild.remove();
+        }
+        const h2Element = document.createElement("h2");
+        const h2Val = dataObj["type"];
+        h2Element.innerText = h2Val;
+        resultDiv.appendChild(h2Element);
+
+        // create table element
+        const tableElement = document.createElement("table");
+        tableElement.className = "table";
+
+        const tBodyElement = document.createElement("tbody");
+        const trElement = document.createElement("tr");
+
+        const tableHeadings = Object.keys(dataObj["records"][0])
+        for (const headingVal of tableHeadings){
+            const thElement = document.createElement("th");
+            thElement.innerText = headingVal;
+            trElement.appendChild(thElement);
+
+        }
+        tBodyElement.appendChild(trElement);
+
+        for (let i=0; i<dataObj["records"].length; i++){
+            const trElement = document.createElement("tr");
+            for (let j=0; j<tableHeadings.length; j++){
+                const tdValue = dataObj["records"][i][tableHeadings[j]]
+                const tdElement = document.createElement("td");
+                tdElement.innerText = tdValue;
+                trElement.appendChild(tdElement)
+
+            }
+            tBodyElement.appendChild(trElement);
+
+        }
+        tableElement.appendChild(tBodyElement);
+        resultDiv.appendChild(tableElement);
+
+      }
+    </script>
+  </body>
 </html>
